--- a/css/cajas.css
+++ b/css/cajas.css
@@ -27,3 +27,19 @@ div img{
 	margin: 20px 50px;
 
 }
+
+.muestra{
+	width: 300px;
+	height: 400px;
+	margin: 20px;
+	padding: 20px;
+	border: 5px solid pink;
+}
+
+.anterior, .posterior{
+	width: 100px;
+	height: 200px;
+	padding: 0px;
+	border:  2px solid purple;
+
+}
